--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
     "googleapis": "^148.0.0",
     "jwt-decode": "^4.0.0",
